Fixed Glossary Letter Links to Wrap instead of Overflowing

--- a/src/app/glossary/glossary.component.css
+++ b/src/app/glossary/glossary.component.css
@@ -1,7 +1,11 @@
-/*Applied to overall*/
+/* Applied to overall */
 .letterlinks 
 {
     margin-bottom: 50px;
+    margin-right: 1em;
+    /* For better control and allow wrapping of links */
+    display: flex;
+    flex-wrap: wrap;
 }
 
 /*Applied to each individual links*/
@@ -11,6 +15,7 @@
     font-weight: bold;
     text-decoration: none;
     margin-right: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 .category
@@ -30,6 +35,6 @@ dt
 dd
 {
     margin-left: 1em;
-    margin-right: 8em;
+    margin-right: 1em;
     margin-bottom: 1em;
 }
